...
                                <rect key="frame" x="46.5" y="157" width="282.5" height="353.5"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Xaa-5A-jXP">
                                <rect key="frame" x="56.5" y="167" width="262.5" height="333.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g53-X9-c9N">
                                        <rect key="frame" x="0.0" y="0.0" width="262.5" height="60"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xWI-Y3-O17">
                                        <rect key="frame" x="0.0" y="68" width="262.5" height="60.5"/>
                                        <color key="backgroundColor" red="0.49132860479582463" green="0.46435343962397779" blue="0.49565515350877198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-C6-3Ql">
                                        <rect key="frame" x="0.0" y="136.5" width="262.5" height="60"/>
                                        <color key="backgroundColor" red="0.49132860480000001" green="0.46435343959999997" blue="0.4956551535" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="password"/>
                                    </textField>
...
                                            <action selector="logInButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2uU-y0-sEF"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9n-Bf-kif">
                                        <rect key="frame" x="0.0" y="273" width="262.5" height="60.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Sign up">
                                            <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="CDB-Cn-FpZ" kind="presentation" id="NR2-gs-qhg"/>
                                        </connections>
                                    </button>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2md-J5-6Eg">
                                        <rect key="frame" x="0.0" y="0.0" width="138.5" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                        <color key="textColor" red="0.0" green="0.56827590809999995" blue="0.27382144759999999" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n4r-0H-jVc">
                                        <rect key="frame" x="0.0" y="56" width="138.5" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="wn9-WB-Cdd"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="password"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="dmR-IM-pND"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rgK-MN-acD">
                                        <rect key="frame" x="0.0" y="224" width="138.5" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="password"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="GgJ-as-I7s"/>
...
