...
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <color key="textColor" red="0.95989583329999995" green="0.95989583329999995" blue="0.95989583329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0CZ-F2-ZzO">
                                <rect key="frame" x="328" y="28" width="39" height="30"/>
                                <state key="normal" title="Close">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="closeBtnPressed:" destination="vVp-gE-JNM" eventType="touchUpInside" id="P3o-EN-qB8"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="617" width="375" height="40"/>
                                <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="XbF-vS-p1y"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Log out">
                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logOutBtnPressed:" destination="T96-ro-mr6" eventType="touchUpInside" id="RX4-Z5-2bK"/>
                                </connections>
                            </button>
...
